style: fix overflow for code blocks

--- a/themes/smol-cat/static/css/style.css
+++ b/themes/smol-cat/static/css/style.css
@@ -190,3 +190,8 @@ p > code, li > code {
 .header-anchor {
     padding-left: 0.25ch;
 }
+
+.highlight div,
+.highlight pre {
+  overflow-x: auto;
+}
